完成第六章的第6，7节